deployment/kustomize/base/frontend-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: portal-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-frontend
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: portal-frontend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: portal-frontend
    spec:
      imagePullSecrets:
        - name: github-registry-auth
      containers:
        - name: frontend-nginx
          image: frontend-image
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 3
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
