deployment/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cluster-issuer-letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 128m
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: participant-portal-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: part-tsen-1.dev.possible-x.de
      http:
        paths:
          - backend:
              service:
                name: backend-svc
                port:
                  number: 8080
            path: /api/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: frontend-svc
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - part-tsen-1.dev.possible-x.de
      secretName: part-tsen-ssl-certificate
